<resources>
    <string name="app_name" translatable="false">Spieleabend</string>
    <string name="menu_evaluation">Evaluation</string>
    <string name="rate">Evaluation</string>
    <string name="dashboard" translatable="false">DASHBOARD</string>
    <string name="next_game_night_dash_text">Next Game Night:</string>
    <string name="next_game_night">Next Game Night</string>
    <string name="host_dash_text">Host:</string>
    <string name="host">Host</string>
    <string name="planned_game">Planned Game:</string>
    <string name="planned_meal_dash_text">Planned meal:</string>
    <string name="planned_meal">Planned meal</string>
    <string name="question_evening">How did you like the evening?</string>
    <string name="question_host">How did you like the host?</string>
    <string name="question_meal">How did you like the meal?</string>
    <string name="evaluation_evening">Rating of the evening</string>
    <string name="evaluation_host">Rating as host</string>
    <string name="evaluation_meal">Rating of the meal</string>
    <string name="commit">Commit</string>
    <string name="suggestions">Suggestions</string>
    <string name="menu_planning">Planning</string>
    <string name="suggestion_game">Suggest a Game</string>
    <string name="your_suggestions_dash_text">Your Suggestions:</string>
    <string name="your_suggestions">Your Suggestions</string>
    <string name="suggestion_meal">Suggest a food direction</string>
    <string name="evening_planning">Evening planning</string>
    <string name="rate_other_suggestions_dash_text">Rate others Suggestions</string>
    <string name="no_new_suggestions_dash_text">No new suggestions available.</string>
    <string name="poll">Poll</string>
    <string name="poll_results">Poll-Results</string>
    <string name="set_night_fakts">Set frame</string>
    <string name="set_frame_dash_text">Set the frame for the game night:</string>
    <string name="set_game_dash_text">Set a game</string>
    <string name="set_meal_dash_text">Set a meal</string>
    <string name="information_not_processed_toast">Informations could not be processed!</string>
    <string name="information_not_found_toast">Informations could not be found!</string>
    <string name="server_not_found">Server not found!</string>
    <string name="save_success_toast">Successfully saved!</string>
    <string name="save_not_success_toast">Save failed!</string>
    <string name="settings">Settings</string>
    <string name="current_group_dash_text">Current Group:</string>
    <string name="username_dash_text">Username</string>
    <string name="join_group">Join a group</string>
    <string name="your_groups_dash_text">Your groups:</string>
    <string name="enter_group_name">Enter a group name</string>
    <string name="leave_group">Leave current group</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="username_not_empty">Username can\'t be empty!</string>
    <string name="group_not_empty">Group can\'t be empty!</string>
    <string name="no_group_found">No group found</string>
    <string name="create_group">Create new group</string>
    <string name="enter_group_username">Enter Username for this group</string>
    <string name="delete_group">Group deleted because no members.</string>
    <string name="group_not_found">Group not found</string>
    <string name="group_create_join">Group created and joined</string>
    <string name="join_success">Join success</string>
    <string name="connect_failed">Connection failed</string>
    <string name="username_exists">Username exist in group</string>
    <string name="user_not_found">User not found</string>
    <string name="in_group">You\'re in this group!</string>
    <string name="username_changed">Username changed</string>
    <string name="meal">Meal</string>
    <string name="game">Game</string>
    <string name="group">Group</string>
    <string name="one_field_not_empty">At least one field can\'t be empty!</string>
    <string name="message">Messages</string>
    <string name="message_text">Enter message</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="only_host_dash_text">Only Host can set night fakts.</string>
    <string name="evaluation">Evaluation</string>
    <string name="myEvaluation">My evaluation</string>
    <string name="save_date">Save date</string>
    <string name="game_night_event_text">Gamenight</string>
    <string name="eval_double">You can\'t vote twice!</string>
    <string name="eval_early">Game night isn\'t over!</string>
    <string name="eval_yourself">You can\'t vote yourself!</string>
    <string name="leave_fail_host">Host can\'t leave!</string>
    <string name="host_select">Error: Please select both at once!</string>
</resources>