<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".evaluation.EvaluationFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/question_meal"
        android:textSize="20sp" />

    <RatingBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/ratingBarMeal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1"
        android:contentDescription="@string/question_meal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/question_evening"
        android:textSize="20sp" />

    <RatingBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/ratingBarEvening"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1"
        android:contentDescription="@string/question_evening"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/question_host"
        android:textSize="20sp" />

    <RatingBar
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/ratingBarHost"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:rating="0"
        android:stepSize="1"
        android:contentDescription="@string/question_host"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/commit"
        android:id="@+id/button_evaluation_commit"
        android:layout_marginBottom="20dp"/>
</LinearLayout>