<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".evaluation.MyEvaluationFragment"
    android:orientation="vertical">



    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/evaluation_meal"
                android:textSize="20sp" />

            <RatingBar
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/evaluationBarMeal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:rating="0"
                android:stepSize="1"
                android:isIndicator="true"
                android:contentDescription="@string/evaluation_meal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/evaluation_host"
                android:textSize="20sp" />

            <RatingBar
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/evaluationBarHost"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:rating="0"
                android:stepSize="1"
                android:isIndicator="true"
                android:contentDescription="@string/evaluation_host"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/evaluation_evening"
                android:textSize="20sp" />

            <RatingBar
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/evaluationBarEvening"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:rating="0"
                android:stepSize="1"
                android:isIndicator="true"
                android:contentDescription="@string/evaluation_evening"
                />
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>